--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/EduardLopatin/property-cross#readme",
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-ui-router": "^0.3.2"
+    "angular-ui-router": "^0.3.2",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
